# gabor_filter_bank_unity

./: README.md
unity_webcam_wrinkles/: .gitignore  Assembly-CSharp.csproj  UpgradeLog.htm  unity_webcam_wrinkles.sln
unity_webcam_wrinkles/Assets/: GetCameraImage.cs  shadeless.mat
unity_webcam_wrinkles/Assets/Scenes/: SampleScene.unity
unity_webcam_wrinkles/ProjectSettings/: ProjectSettings.asset
wrinkles_plugin/: CMakeLists.txt  wrinkles.cpp  wrinkles.h
